# simple-rag-api

./: README.md  create_table.py  main.py  pyproject.toml
app/: main.py
app/config/: env.py  security.py
app/config/auth/: auth_jwt.py  auth_password.py  security.py
app/crud/: chat_messages_crud.py  chats_crud.py  sessions_crud.py  users_crud.py
app/database/: postgresql.py
app/models/: __init__.py  chat_message_model.py  chat_model.py  session_model.py  user_model.py
app/routers/: admin_router.py  auth_router.py  chat_router.py  lifespan.py
app/schemas/: base_response.py  chat_request.py  chats_response.py  security_schema.py  token_request.py  user_request.py
app/services/: custom_exception_response.py  llm_stream_service.py  smtp.py  token_service.py
app/services/rag_module/: llm.py  prompt.py  runpod_endpoint.py
app/templates/: invite_template.html
